--- a/src/docs/partials/migration.html
+++ b/src/docs/partials/migration.html
@@ -38,7 +38,7 @@
             <textarea id='from' class='form-control'></textarea>
           </div>
           <div class='col-sm-1'>
-            <button class='btn btn-primary' id='convertButton'><i class='fas fa-angle-double-right'></i></button>
+            <button class='btn btn-primary' id='convertButton'><i class="fa-solid fa-angle-double-right" aria-hidden="true"></i></button>
           </div>
           <div class='col'>
             <label for='to' class='form-label'>Output</label>
@@ -54,13 +54,13 @@
 <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
     <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"/>
     <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
-        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+        <div class="input-group-text"><i class="fa fa-calendar" aria-hidden="true"></i></div>
     </div>
 </div>
             </textarea>
           </div>
           <div class='col-sm-1'>
-            <button class='btn btn-primary' id='convertButtonHtml'><i class='fas fa-angle-double-right'></i></button>
+            <button class='btn btn-primary' id='convertButtonHtml'><i class="fa-solid fa-angle-double-right" aria-hidden="true"></i></button>
           </div>
           <div class='col'>
             <label for='toHtml' class='form-label'>Output</label>
