--- a/src/docs/partials/namespace/events.html
+++ b/src/docs/partials/namespace/events.html
@@ -17,7 +17,7 @@ interface BaseEvent {
     </code>
   </pre>
     <h2 id="change">change.td <a class='anchorjs-link ' aria-label='Anchor' href='#change'><i
-      class='fas fa-anchor'></i></a></h2>
+      class='fas fa-anchor' aria-hidden="true"></i></a></h2>
     <p>
       Emit when the date selection is changed.
     </p>
@@ -32,7 +32,7 @@ interface ChangeEvent extends BaseEvent {
     </code>
   </pre>
     <h2 id="update">update.td <a class='anchorjs-link ' aria-label='Anchor' href='#update'><i
-      class='fas fa-anchor'></i></a></h2>
+      class='fas fa-anchor' aria-hidden="true"></i></a></h2>
     <p>
       Emits when the view changes for example from month view to the year view.
     </p>
@@ -44,7 +44,7 @@ interface ViewUpdateEvent extends BaseEvent {
     </code>
   </pre>
     <h2 id="error">error.td <a class='anchorjs-link ' aria-label='Anchor' href='#error'><i
-      class='fas fa-anchor'></i></a></h2>
+      class='fas fa-anchor' aria-hidden="true"></i></a></h2>
     <p>
       Emits when a selected date or value from the input field fails to meet the provided validation rules.
     </p>
@@ -58,12 +58,12 @@ interface FailEvent extends BaseEvent {
     </code>
   </pre>
     <h2 id="show">show.td <a class='anchorjs-link ' aria-label='Anchor' href='#show'><i
-      class='fas fa-anchor'></i></a></h2>
+      class='fas fa-anchor' aria-hidden="true"></i></a></h2>
     <p>
       Emits when then picker widget is displayed.
     </p>
     <h2 id="hide">hide.td <a class='anchorjs-link ' aria-label='Anchor' href='#hide'><i
-      class='fas fa-anchor'></i></a></h2>
+      class='fas fa-anchor' aria-hidden="true"></i></a></h2>
     <p>
       Emits when the picker widget is hidden.
     </p>
