--- a/src/docs/partials/namespace/errors.html
+++ b/src/docs/partials/namespace/errors.html
@@ -13,14 +13,14 @@
   <section>
     <h2 id='unexpectedOption'>unexpectedOption <small>(code: 1)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                           href='#unexpectedOption'><i
-      class='fas fa-anchor'></i></a></h2>
+      class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       An error indicating that a key in the options object is invalid.
     </p>
 
     <h2 id='unexpectedOptions'>unexpectedOptions <small>(code: 1)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                             href='#unexpectedOptions'><i
-      class='fas fa-anchor'></i></a></h2>
+      class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       An error indicating that one more keys in the options object is invalid.
     </p>
@@ -28,7 +28,7 @@
     <h2 id='unexpectedOptionValue'>unexpectedOptionValue <small>(code: 2)</small><a class='anchorjs-link '
                                                                                     aria-label='Anchor'
                                                                                     href='#unexpectedOptionValue'><i
-      class='fas fa-anchor'></i></a></h2>
+      class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       An error when an option is provide an unsupported value. For example a value of 'cheese' for toolbarPlacement
       which only supports 'top', 'bottom', 'default'.
@@ -36,7 +36,7 @@
 
     <h2 id='typeMismatch'>typeMismatch <small>(code: 3)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                   href='#typeMismatch'><i
-      class='fas fa-anchor'></i></a></h2>
+      class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       An error when an option value is the wrong type.
       For example a string value was provided to multipleDates which only
@@ -45,7 +45,7 @@
 
     <h2 id='numbersOutOfRage'>numbersOutOfRage <small>(code: 4)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                           href='#numbersOutOfRage'><i
-      class='fas fa-anchor'></i></a></h2>
+      class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       An error when an option value is outside of the expected range.
       For example <code>restrictions.daysOfWeekDisabled</code> excepts a value between 0 and 6.
@@ -53,7 +53,7 @@
 
     <h2 id='failedToParseDate'>failedToParseDate <small>(code: 5)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                             href='#failedToParseDate'><i
-      class='fas fa-anchor'></i></a></h2>
+      class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       An error when a value for a date options couldn't be parsed. Either
       the option was an invalide string or an invalid Date object.
@@ -61,14 +61,14 @@
 
     <h2 id='mustProvideElement'>mustProvideElement <small>(code: 6)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                               href='#mustProvideElement'><i
-      class='fas fa-anchor'></i></a></h2>
+      class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       An error when an element to attach to was not provided in the constructor.
     </p>
 
     <h2 id='subscribeMismatch'>subscribeMismatch <small>(code: 7)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                             href='#subscribeMismatch'><i
-      class='fas fa-anchor'></i></a></h2>
+      class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       An error if providing an array for the events to subscribe method doesn't have
       the same number of callbacks. E.g., subscribe([1,2], [1])
@@ -77,13 +77,13 @@
     <h2 id='conflictingConfiguration'>conflictingConfiguration <small>(code: 8)</small><a class='anchorjs-link '
                                                                                           aria-label='Anchor'
                                                                                           href='#conflictingConfiguration'><i
-      class='fas fa-anchor'></i></a></h2>
+      class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The configuration has conflicting rules e.g. minDate is after maxDate
     </p>
 
     <h2 id='dateString'>dateString<a class='anchorjs-link ' aria-label='Anchor' href='#dateString'><i
-      class='fas fa-anchor'></i></a></h2>
+      class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Logs a warning if a date option value is provided as a string, instead of
       a date/datetime object.
@@ -96,7 +96,7 @@
       <div class='col offset-1'>
         <h3 id='failedToSetInvalidDate'>failedToSetInvalidDate<a class='anchorjs-link ' aria-label='Anchor'
                                                                  href='#failedToSetInvalidDate'><i
-          class='fas fa-anchor'></i></a></h3>
+          class="fa-solid fa-anchor" aria-hidden="true"></i></a></h3>
         <p>
           Used with an <a href='events.html#error'>Error Event type</a> if the user selects a date that fails
           restriction
@@ -105,7 +105,7 @@
 
         <h3 id='failedToParseInput'>failedToParseInput<a class='anchorjs-link ' aria-label='Anchor'
                                                          href='#failedToParseInput'><i
-          class='fas fa-anchor'></i></a></h3>
+          class="fa-solid fa-anchor" aria-hidden="true"></i></a></h3>
         <p>
           Used with an <a href='events.html#error'>Error Event type</a> when a user changes the value of the input field
           directly, and does not provide a valid date.
