--- a/src/docs/styles/styles.scss
+++ b/src/docs/styles/styles.scss
@@ -130,4 +130,8 @@ section h2 {
     background-color: rgb(125, 97, 0);
     border-color: rgb(139, 108, 0);
   }
+
+  code {
+    color: #A3E170;
+  }
 }
