--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,15 +1,19 @@
 <page-body>
   <section>
     <h1>Version 6</h1>
-    <h2>6-beta4.1</h2>
+    <h2>6-beta5</h2>
     <h3>Bug Fixes</h3>
     <ul>
       <li>Fixed clear() doesn't erase text of date. <a
               href='https://github.com/Eonasdan/tempus-dominus/issues/2472'>#2472</a></li>
       <li>Fixed clear button event cycle. <a
               href='https://github.com/Eonasdan/tempus-dominus/issues/2516'>#2516</a></li>
-      <li>Fixed monthFormatted. <a
+      <li>Fixed 2 digit formatting. <a
               href='https://github.com/Eonasdan/tempus-dominus/issues/2516'>#2513</a></li>
+      <li>Trigger native change event on input when available - fixes #2401 <a
+              href='https://github.com/Eonasdan/tempus-dominus/issues/2533'>via #2533</a></li>
+      <li>Fixes use of SVG icons (issue #2527) <a
+              href='https://github.com/Eonasdan/tempus-dominus/issues/2533'>via #2529</a></li>
     </ul>
     <h2>Version 6-beta4</h2>
     <h3>New</h3>
