--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -98,25 +98,25 @@
 
       <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" href="https://github.com/Eonasdan/tempus-dominus" target="_blank" rel="noopener">
+          <a class="nav-link p-2" href="https://github.com/Eonasdan/tempus-dominus" title="Find this project on GitHub" target="_blank" rel="noopener">
             <i class="fa-brands fa-github" aria-hidden="true"></i>
             <small class="d-md-none ms-2">GitHub</small>
           </a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" href="https://twitter.com/eonasdan" target="_blank" rel="noopener">
+          <a class="nav-link p-2" href="https://twitter.com/eonasdan" title="Find me on twitter" target="_blank" rel="noopener">
             <i class="fa-brands fa-twitter" aria-hidden="true"></i>
             <small class="d-md-none ms-2">Twitter</small>
           </a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" href="https://discord.gg/BHS9jw9YPf" target="_blank" rel="noopener">
+          <a class="nav-link p-2" href="https://discord.gg/BHS9jw9YPf" title="Join us on Discord" target="_blank" rel="noopener">
             <i class="fa-brands fa-discord" aria-hidden="true"></i>
             <small class="d-md-none ms-2">Discord</small>
           </a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" href="https://ko-fi.com/eonasdan" target="_blank" rel="noopener">
+          <a class="nav-link p-2" href="https://ko-fi.com/eonasdan" title="Buy me a coffee (donations)" target="_blank" rel="noopener">
             <i class="fa-solid fa-coffee" aria-hidden="true"></i>
             <small class="d-md-none ms-2">Ko-fi</small>
           </a>
