--- a/src/docs/styles/styles.scss
+++ b/src/docs/styles/styles.scss
@@ -63,6 +63,7 @@ section h2 {
 }
 
 @media (prefers-color-scheme: dark) {
+
   $dark-background: #171717;
   $dark-font:#e3e3e3;
   $dark-background-alt: #2d2d2d;
@@ -71,6 +72,11 @@ section h2 {
   body, .form-control {
     background-color: $dark-background;
     color: $dark-font;
+  }
+
+
+  .bd-navbar {
+    background-color: #0248B1;
   }
 
   a, .show-code, .nav-link {
