more accessibility work.

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,6 +1,18 @@
 <page-body>
   <section>
     <h1>Version 6</h1>
+    <h2>6-beta6</h2>
+    <h3>New</h3>
+    <ul>
+      <li>Keybindings have been brought back. -todo docs-</li>
+      <li>Add new localization keys for accessibility.
+        <code>calendarWeekPrefix</code> is used if the calendar weeks options is enabled.
+        <code>disabled</code> is used when a selectable is disabled.</li>
+    </ul>
+    <h3>Bug Fixes</h3>
+    <ul>
+      <li></li>
+    </ul>
     <h2>6-beta5</h2>
     <h3>Bug Fixes</h3>
     <ul>
