--- a/src/docs/partials/examples/index.html
+++ b/src/docs/partials/examples/index.html
@@ -11,7 +11,7 @@
     </section>
 
     <section>
-        <h3 id='minimum-setup'>Minimum Setup <a class='anchorjs-link ' aria-label='Anchor' href='#minimum-setup'><i
+        <h3 id='minimum-setup'>Minimum Setup <a class='anchor-link ' aria-label='Anchor' href='#minimum-setup'><i
                 class='fa-solid fa-anchor' aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -91,7 +91,7 @@
 
     <section>
         <h3 id='simple-setup'>Simple Setup
-            <a class='anchorjs-link ' aria-label='Anchor' href='#simple-setup'>
+            <a class='anchor-link ' aria-label='Anchor' href='#simple-setup'>
                 <i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
             <small class='show-code' title='View Code'><i class="fa-solid fa-code" aria-hidden="true"></i></small>
 
@@ -206,7 +206,7 @@
     </section>
 
     <section>
-        <h3 id='locales'>Using Locales <a class='anchorjs-link ' aria-label='Anchor' href='#locales'><i
+        <h3 id='locales'>Using Locales <a class='anchor-link ' aria-label='Anchor' href='#locales'><i
                 class='fa-solid fa-anchor' aria-hidden="true"></i></a> <small class='show-code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -392,7 +392,7 @@
     </section>
 
     <section>
-        <h3 id='time-only'>Time Only <a class='anchorjs-link ' aria-label='Anchor' href='#time-only'><i
+        <h3 id='time-only'>Time Only <a class='anchor-link ' aria-label='Anchor' href='#time-only'><i
                 class='fa-solid fa-anchor' aria-hidden="true"></i></a> <small class='show-code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -528,7 +528,7 @@
     </section>
 
     <section>
-        <h3 id='date-only'>Date Only <a class='anchorjs-link ' aria-label='Anchor' href='#date-only'><i
+        <h3 id='date-only'>Date Only <a class='anchor-link ' aria-label='Anchor' href='#date-only'><i
                 class='fa-solid fa-anchor' aria-hidden="true"></i></a> <small class='show-code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -663,7 +663,7 @@
     </section>
 
     <section>
-        <h3 id='input-only'>Input Only <a class='anchorjs-link ' aria-label='Anchor' href='#simple-setup'><i
+        <h3 id='input-only'>Input Only <a class='anchor-link ' aria-label='Anchor' href='#simple-setup'><i
                 class='fa-solid fa-anchor' aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -757,7 +757,7 @@
     </section>
 
     <section>
-        <h3 id='enabledDisabled-dates'>Enabled/Disabled Dates <a class='anchorjs-link ' aria-label='Anchor'
+        <h3 id='enabledDisabled-dates'>Enabled/Disabled Dates <a class='anchor-link ' aria-label='Anchor'
                                                                  href='#simple-setup'><i
                 class='fa-solid fa-anchor' aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
@@ -885,7 +885,7 @@
     </section>
 
     <section>
-        <h3 id='linked-pickers'>Linked pickers <a class='anchorjs-link ' aria-label='Anchor' href='#linked-pickers'><i
+        <h3 id='linked-pickers'>Linked pickers <a class='anchor-link ' aria-label='Anchor' href='#linked-pickers'><i
                 class='fa-solid fa-anchor' aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -1095,7 +1095,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id='custom-icons'>Custom Icons <a class='anchorjs-link ' aria-label='Anchor' href='#custom-icons'><i
+        <h3 id='custom-icons'>Custom Icons <a class='anchor-link ' aria-label='Anchor' href='#custom-icons'><i
                 class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -1241,7 +1241,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id='view-mode'>View Mode <a class='anchorjs-link ' aria-label='Anchor' href='#view-mode'><i
+        <h3 id='view-mode'>View Mode <a class='anchor-link ' aria-label='Anchor' href='#view-mode'><i
                 class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -1355,7 +1355,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id='min-view-mode'>Minimum View <a class='anchorjs-link ' aria-label='Anchor' href='#min-view-mode'><i
+        <h3 id='min-view-mode'>Minimum View <a class='anchor-link ' aria-label='Anchor' href='#min-view-mode'><i
                 class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -1486,7 +1486,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id='disabled-days-of-the-week'>Disabled Days of the Week <a class='anchorjs-link ' aria-label='Anchor'
+        <h3 id='disabled-days-of-the-week'>Disabled Days of the Week <a class='anchor-link ' aria-label='Anchor'
                                                                         href='#disabled-days-of-the-week'><i
                 class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
@@ -1603,7 +1603,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id='inline'>Inline <a class='anchorjs-link ' aria-label='Anchor' href='#inline'><i
+        <h3 id='inline'>Inline <a class='anchor-link ' aria-label='Anchor' href='#inline'><i
                 class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -1687,7 +1687,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id='multidate'>Multiple Dates <a class='anchorjs-link ' aria-label='Anchor' href='#multidate'><i
+        <h3 id='multidate'>Multiple Dates <a class='anchor-link ' aria-label='Anchor' href='#multidate'><i
                 class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -1804,7 +1804,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id='setting-options'>Update options <a class='anchorjs-link ' aria-label='Anchor' href='#setting-options'><i
+        <h3 id='setting-options'>Update options <a class='anchor-link ' aria-label='Anchor' href='#setting-options'><i
                 class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
@@ -1945,7 +1945,7 @@ changeOptionsButton.addEventListener('click', () => {
     </section>
 
     <section>
-        <h3 id='container-option'>Example with container parameter<a class='anchorjs-link ' aria-label='Anchor'
+        <h3 id='container-option'>Example with container parameter<a class='anchor-link ' aria-label='Anchor'
                                                                      href='#container-option'><i
                 class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i
                 class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
@@ -2038,14 +2038,14 @@ new tempusDominus.TempusDominus(document.getElementById('containerDatePicker'), 
 
     <section id='plugins-example'>
         <h3>Plugins
-            <a class='anchorjs-link ' aria-label='Anchor' href='#plugins-example'>
+            <a class='anchor-link ' aria-label='Anchor' href='#plugins-example'>
                 <i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
             <small class='show-code' title='View Code'><i class="fa-solid fa-code" aria-hidden="true"></i></small>
         </h3>
 
         <p>
             Plugins allow you to extend the picker by adding new functionality to either Tempus Dominus globally,
-            the plugin or by overwritting existing functionality. Check the events tab to see the logs.
+            the plugin or by overwriting existing functionality. Check the events tab to see the logs.
         </p>
 
         <div class='code-blocks d-none'>
@@ -2114,6 +2114,7 @@ const doLog = (value)=&gt;
 	  &#39;log&#39;,
 	  `from plugin:`, value);
 };
+
 loadPluginButton.addEventListener(&#39;click&#39;, () =&gt; {
 	const script = document.createElement(&#39;script&#39;);
 	script.onload = function () {
@@ -2179,6 +2180,7 @@ loadPluginButton.addEventListener(&#39;click&#39;, () =&gt; {
                     'log',
                     `from plugin:`, value);
             };
+
             loadPluginButton.addEventListener('click', () => {
                 const script = document.createElement('script');
                 script.onload = function () {
@@ -2192,6 +2194,156 @@ loadPluginButton.addEventListener(&#39;click&#39;, () =&gt; {
 
                 document.body.appendChild(script);
             });
+        </script>
+    </section>
+
+    <section id='picker-functions'>
+        <h3>Picker Functions
+            <a class='anchor-link ' aria-label='Anchor' href='#picker-functions'>
+                <i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
+            <small class='show-code' title='View Code'><i class="fa-solid fa-code" aria-hidden="true"></i></small>
+        </h3>
+
+        <p>
+            Click <i class="fa-solid fa-code" aria-hidden="true"></i> to view the code and the log.
+            Clicking the buttons below will log the results there.
+        </p>
+
+        <div class='code-blocks d-none'>
+            <ul class='nav nav-tabs' role='tablist'>
+                <li class='nav-item' role='presentation'>
+                    <button class='nav-link active' id='pickerFunctionsHtml-tab' data-bs-toggle='tab'
+                            data-bs-target='#pickerFunctionsHtml' type='button'
+                            role='tab' aria-controls='pickerFunctionsHtml' aria-selected='true'>HTML
+                    </button>
+                </li>
+                <li class='nav-item' role='presentation'>
+                    <button class='nav-link' id='pickerFunctionsJs-tab' data-bs-toggle='tab'
+                            data-bs-target='#pickerFunctionsJs'
+                            type='button'
+                            role='tab' aria-controls='pickerFunctionsJs' aria-selected='false'>Javascript
+                    </button>
+                </li>
+                <li class='nav-item' role='presentation'>
+                    <button class='nav-link' id='pickerFunctionsLog-tab' data-bs-toggle='tab'
+                            data-bs-target='#pickerFunctionsLog'
+                            type='button'
+                            role='tab' aria-controls='pickerFunctionsLog' aria-selected='false'>Events
+                    </button>
+                </li>
+            </ul>
+            <div class='tab-content'>
+                <div class='tab-pane fade show active' id='pickerFunctionsHtml' role='tabpanel'
+                     aria-labelledby='pickerFunctionsHtml-tab'>
+         <pre>
+           <code class='language-html'>
+ &lt;div
+     class='input-group'
+     id='pickerFunctions'
+     data-td-target-input='nearest'
+     data-td-target-toggle='nearest'
+ &gt;
+   &lt;input
+     id='pickerFunctionsInput'
+     type='text'
+     class='form-control'
+     data-td-target='#pickerFunctions'
+   /&gt;
+   &lt;span
+     class='input-group-text'
+     data-td-target='#pickerFunctions'
+     data-td-toggle='datetimepicker'
+   &gt;
+     &lt;span class='fa-solid fa-calendar'&gt;&lt;/span&gt;
+   &lt;/span&gt;
+ &lt;/div&gt;
+           </code>
+         </pre>
+                </div>
+                <div class='tab-pane fade' id='pickerFunctionsJs' role='tabpanel'
+                     aria-labelledby='pickerFunctionsJs-tab'>
+         <pre>
+           <code class='language-javascript'>
+ new tempusDominus.TempusDominus(document.getElementById('pickerFunctions'));
+           </code>
+         </pre>
+                </div>
+                <div class='tab-pane fade logger' id='pickerFunctionsLog' role='tabpanel'
+                     aria-labelledby='pickerFunctionsLog-tab'>
+                    <div class='alert alert-info'>
+                        Events will display as you manipulate the picker.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class='container'>
+            <div class='row'>
+                <div class='col-sm-6'>
+                    <label for='pickerFunctionsInput' class='form-label'>Functions</label>
+                    <div
+                            class='input-group log-event'
+                            id='pickerFunctions'
+                            data-td-target-input='nearest'
+                            data-td-target-toggle='nearest'
+                    >
+                        <input
+                                id='pickerFunctionsInput'
+                                type='text'
+                                class='form-control'
+                                data-td-target='#pickerFunctions'
+                        />
+                        <span
+                                class='input-group-text'
+                                data-td-target='#pickerFunctions'
+                                data-td-toggle='datetimepicker'
+                        >
+                            <span class='fa-solid fa-calendar'></span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class='row mt-3'>
+                <div class='col-sm-6'>
+                    <button id='getDate' class='btn btn-primary me-3'>Get Date</button>
+                    <button id='setDate' class='btn btn-primary'>Set Date to 2022-05-10</button>
+                </div>
+            </div>
+        </div>
+
+        <script type='text/javascript'>
+            const functionLog = (prefix, value) => {
+                logger(document.getElementById('picker-functions').getElementsByClassName('logger')[0],
+                    'log',
+                    prefix,
+                    value);
+            };
+
+            const pickerFunctions = new tempusDominus.TempusDominus(document.getElementById('pickerFunctions'), {
+                multipleDates: true,
+                display: {
+                    components: {
+                        clock: false
+                    }
+                }
+            });
+
+            document.getElementById('getDate').addEventListener('click', () => {
+                //logs all selected dates
+                functionLog('all selected', JSON.stringify(pickerFunctions.dates.picked, null, 2));
+                //logs the last selected
+                functionLog('last selected', pickerFunctions.dates.lastPicked);
+                //logs the selected index. This will always be 0 if multipleDates is false
+                functionLog('last selected index', pickerFunctions.dates.lastPickedIndex);
+            });
+
+            document.getElementById('setDate').addEventListener('click', () => {
+                //parseInput will attempt to turn strings and Date objects to a DateTime object.
+                const parsedDate = pickerFunctions.dates.parseInput(new Date(2020, 4, 10));
+                //if multipleDates is false, the second parameter is not required.
+                pickerFunctions.dates.setValue(parsedDate, pickerFunctions.dates.lastPickedIndex);
+            });
+
         </script>
     </section>
 
