--- a/src/docs/partials/functions.html
+++ b/src/docs/partials/functions.html
@@ -41,20 +41,20 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
 
     <section>
         <h2 id='dates'>Dates
-            <a class='anchorjs-link' aria-label='Anchor' href='#dates'><i class="fa-solid fa-anchor"
+            <a class='anchor-link' aria-label='Anchor' href='#dates'><i class="fa-solid fa-anchor"
                                                                           aria-hidden="true"></i></a>
         </h2>
         <div class='row'>
             <div class='col offset-1'>
                 <h3 id='viewDate'>Getting the View Date
-                    <a class='anchorjs-link' aria-label='Anchor' href='#viewDate'><i class="fa-solid fa-anchor"
+                    <a class='anchor-link' aria-label='Anchor' href='#viewDate'><i class="fa-solid fa-anchor"
                                                                                      aria-hidden="true"></i></a>
                 </h3>
                 <p>
                     <code>picker.viewDate</code> returns the pickers current view date.
                 </p>
                 <h4 id='picker.dates'>picker.dates
-                    <a class='anchorjs-link' aria-label='Anchor' href='#picker.dates'><i class="fa-solid fa-anchor"
+                    <a class='anchor-link' aria-label='Anchor' href='#picker.dates'><i class="fa-solid fa-anchor"
                                                                                          aria-hidden="true"></i></a>
                 </h4>
                 <p>
@@ -62,28 +62,28 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
                 </p>
                 <div class='col offset-1'>
                     <h5 id='picked'>picked
-                        <a class='anchorjs-link' aria-label='Anchor' href='#picked'><i class="fa-solid fa-anchor"
+                        <a class='anchor-link' aria-label='Anchor' href='#picked'><i class="fa-solid fa-anchor"
                                                                                        aria-hidden="true"></i></a>
                     </h5>
                     <p>
                         Returns an array of <code>DateTime</code> of the selected date(s).
                     </p>
                     <h5 id='lastPicked'>lastPicked
-                        <a class='anchorjs-link' aria-label='Anchor' href='#lastPicked'><i class="fa-solid fa-anchor"
+                        <a class='anchor-link' aria-label='Anchor' href='#lastPicked'><i class="fa-solid fa-anchor"
                                                                                            aria-hidden="true"></i></a>
                     </h5>
                     <p>
                         Returns the last picked <code>DateTime</code> of the selected date(s).
                     </p>
                     <h5 id='lastPickedIndex'>lastPickedIndex
-                        <a class='anchorjs-link' aria-label='Anchor' href='#lastPickedIndex'><i
+                        <a class='anchor-link' aria-label='Anchor' href='#lastPickedIndex'><i
                                 class="fa-solid fa-anchor" aria-hidden="true"></i></a>
                     </h5>
                     <p>
                         Returns the length of picked dates -1 or 0 if none are selected.
                     </p>
                     <h5 id='datesAdd'>add(DateTime)
-                        <a class='anchorjs-link' aria-label='Anchor' href='#datesAdd'><i class="fa-solid fa-anchor"
+                        <a class='anchor-link' aria-label='Anchor' href='#datesAdd'><i class="fa-solid fa-anchor"
                                                                                          aria-hidden="true"></i></a>
                     </h5>
                     <p>
@@ -94,7 +94,7 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
                         widget or do any validation.
                     </p>
                     <h5 id='datesSet'>setValue(value: DateTime, index?: number)
-                        <a class='anchorjs-link' aria-label='Anchor' href='#datesSet'><i class="fa-solid fa-anchor"
+                        <a class='anchor-link' aria-label='Anchor' href='#datesSet'><i class="fa-solid fa-anchor"
                                                                                          aria-hidden="true"></i></a>
                     </h5>
                     <p>
@@ -102,7 +102,7 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
                     </p>
 
                     <h5 id='formatInput'>formatInput(value: DateTime): string
-                        <a class='anchorjs-link' aria-label='Anchor' href='#formatInput'><i class="fa-solid fa-anchor"
+                        <a class='anchor-link' aria-label='Anchor' href='#formatInput'><i class="fa-solid fa-anchor"
                                                                                             aria-hidden="true"></i></a>
                     </h5>
                     <p>
@@ -111,8 +111,16 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
                         to provide more complex formatting with moment/dayjs or by hand.
                     </p>
 
+                    <h5 id='parseInput'>parseInput(value:any): DateTime
+                        <a class='anchor-link' aria-label='Anchor' href='#parseInput'><i class="fa-solid fa-anchor"
+                                                                                            aria-hidden="true"></i></a>
+                    </h5>
+                    <p>
+                        Parse the value into a DateTime object. This can be overwritten to supply your own parsing.
+                    </p>
+
                     <h5 id='setFromInput'>setFromInput(value: any, index?: number)
-                        <a class='anchorjs-link' aria-label='Anchor' href='#setFromInput'><i class="fa-solid fa-anchor"
+                        <a class='anchor-link' aria-label='Anchor' href='#setFromInput'><i class="fa-solid fa-anchor"
                                                                                              aria-hidden="true"></i></a>
                     </h5>
                     <p>
@@ -124,7 +132,7 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
                     </p>
 
                     <h5 id='isPicked'>isPicked(DateTime, Unit?)
-                        <a class='anchorjs-link' aria-label='Anchor' href='#isPicked'><i class="fa-solid fa-anchor"
+                        <a class='anchor-link' aria-label='Anchor' href='#isPicked'><i class="fa-solid fa-anchor"
                                                                                          aria-hidden="true"></i></a>
                     </h5>
                     <p>
@@ -133,7 +141,7 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
                         to that unit will be used.
                     </p>
                     <h5 id='pickedIndex'>pickedIndex(DateTime, Unit?)
-                        <a class='anchorjs-link' aria-label='Anchor' href='#pickedIndex'><i
+                        <a class='anchor-link' aria-label='Anchor' href='#pickedIndex'><i
                                 class="fa-solid fa-anchor" aria-hidden="true"></i></a>
                     </h5>
                     <p>
@@ -142,7 +150,7 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
                         multi-date is used. If unit is provided then a granularity to that unit will be used.
                     </p>
                     <h5 id='dateClear'>clear
-                        <a class='anchorjs-link' aria-label='Anchor' href='#dateClear'><i class="fa-solid fa-anchor"
+                        <a class='anchor-link' aria-label='Anchor' href='#dateClear'><i class="fa-solid fa-anchor"
                                                                                           aria-hidden="true"></i></a>
                     </h5>
                     <p>
@@ -159,7 +167,7 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
 
     <section>
         <h2 id='updateOptions'>updateOptions(object, boolean?)
-            <a class='anchorjs-link' aria-label='Anchor' href='#updateOptions'><i class="fa-solid fa-anchor"
+            <a class='anchor-link' aria-label='Anchor' href='#updateOptions'><i class="fa-solid fa-anchor"
                                                                                   aria-hidden="true"></i></a>
         </h2>
         <p>
@@ -178,7 +186,7 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
 
     <section>
         <h2 id='display'>Display
-            <a class='anchorjs-link' aria-label='Anchor' href='#display'><i class="fa-solid fa-anchor"
+            <a class='anchor-link' aria-label='Anchor' href='#display'><i class="fa-solid fa-anchor"
                                                                             aria-hidden="true"></i></a>
         </h2>
         <div class='row'>
@@ -201,7 +209,7 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
                 </ul>
 
                 <h3 id='show'>show
-                    <a class='anchorjs-link' aria-label='Anchor' href='#show'><i class="fa-solid fa-anchor"
+                    <a class='anchor-link' aria-label='Anchor' href='#show'><i class="fa-solid fa-anchor"
                                                                                  aria-hidden="true"></i></a></h3>
                 <p>Shows the widget</p>
                 <h4>Emits</h4>
@@ -217,7 +225,7 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
                     </li>
                 </ul>
                 <h3 id='hide'>hide
-                    <a class='anchorjs-link' aria-label='Anchor' href='#hide'><i class="fa-solid fa-anchor"
+                    <a class='anchor-link' aria-label='Anchor' href='#hide'><i class="fa-solid fa-anchor"
                                                                                  aria-hidden="true"></i></a></h3>
                 <p>Hides the widget</p>
                 <h4>Emits</h4>
@@ -238,14 +246,14 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
     </section>
     <section>
         <h2 id='dispose'>dispose
-            <a class='anchorjs-link' aria-label='Anchor' href='#dispose'><i class="fa-solid fa-anchor"
+            <a class='anchor-link' aria-label='Anchor' href='#dispose'><i class="fa-solid fa-anchor"
                                                                             aria-hidden="true"></i></a></h2>
         <p>Destroys the widget and removes all attached event listeners. If the picker is open it will be hidden and the
             event fired.</p>
     </section>
     <section>
         <h2 id='disable'>disable
-            <a class='anchorjs-link' aria-label='Anchor' href='#disable'><i class="fa-solid fa-anchor"
+            <a class='anchor-link' aria-label='Anchor' href='#disable'><i class="fa-solid fa-anchor"
                                                                             aria-hidden="true"></i></a></h2>
         <p>Disables the input element and the component is attached to, by adding a <code>disabled="true"</code>
             attribute
@@ -258,7 +266,7 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
     </section>
     <section>
         <h2 id='enable'>enable
-            <a class='anchorjs-link' aria-label='Anchor' href='#enable'><i class="fa-solid fa-anchor"
+            <a class='anchor-link' aria-label='Anchor' href='#enable'><i class="fa-solid fa-anchor"
                                                                            aria-hidden="true"></i></a></h2>
         <p>Enables the input element and the component is attached to, by removing <code>disabled</code> attribute from
             it.
@@ -266,13 +274,13 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
     </section>
     <section>
         <h2 id='clear'>clear
-            <a class='anchorjs-link' aria-label='Anchor' href='#clear'><i class="fa-solid fa-anchor"
+            <a class='anchor-link' aria-label='Anchor' href='#clear'><i class="fa-solid fa-anchor"
                                                                           aria-hidden="true"></i></a></h2>
         <p>Clears all selected dates. This is a short cut to <code>picker.dates.clear()</code></p>
     </section>
     <section>
         <h2 id='subscribe'>subscribe(event | events[], callback | callbacks[])
-            <a class='anchorjs-link' aria-label='Anchor' href='#subscribe'><i class="fa-solid fa-anchor"
+            <a class='anchor-link' aria-label='Anchor' href='#subscribe'><i class="fa-solid fa-anchor"
                                                                               aria-hidden="true"></i></a></h2>
         <p>
             Instead of adding event listeners to the pickers element, you can use the subscribe method. You can provide
