--- a/src/docs/partials/namespace/css.html
+++ b/src/docs/partials/namespace/css.html
@@ -3,212 +3,212 @@
     The picker uses the following css classes to style the picker.
   </p>
   <section>
-    <h2 id='widget'>widget <a class='anchorjs-link ' aria-label='Anchor' href='#widget'><i
+    <h2 id='widget'>widget <a class='anchor-link ' aria-label='Anchor' href='#widget'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The outer element for the widget.
     </p>
 
-    <h2 id='calendarHeader'>calendarHeader <a class='anchorjs-link ' aria-label='Anchor' href='#calendarHeader'><i
+    <h2 id='calendarHeader'>calendarHeader <a class='anchor-link ' aria-label='Anchor' href='#calendarHeader'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The element for the calendar view header, next and previous actions.
     </p>
 
-    <h2 id='switch'>switch <a class='anchorjs-link ' aria-label='Anchor' href='#switch'><i
+    <h2 id='switch'>switch <a class='anchor-link ' aria-label='Anchor' href='#switch'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The element for the action to change the calendar view. E.g. month -> year.
     </p>
 
-    <h2 id='sideBySide'>sideBySide <a class='anchorjs-link ' aria-label='Anchor' href='#sideBySide'><i
+    <h2 id='sideBySide'>sideBySide <a class='anchor-link ' aria-label='Anchor' href='#sideBySide'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to the widget element when the side by side option is in use.
     </p>
 
-    <h2 id='previous'>previous <a class='anchorjs-link ' aria-label='Anchor' href='#previous'><i
+    <h2 id='previous'>previous <a class='anchor-link ' aria-label='Anchor' href='#previous'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The element for the action to change the calendar view, e.g. August -> July
     </p>
 
-    <h2 id='next'>next <a class='anchorjs-link ' aria-label='Anchor' href='#next'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id='next'>next <a class='anchor-link ' aria-label='Anchor' href='#next'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The element for the action to change the calendar view, e.g. August -> September
     </p>
 
-    <h2 id='disabled'>disabled <a class='anchorjs-link ' aria-label='Anchor' href='#disabled'><i
+    <h2 id='disabled'>disabled <a class='anchor-link ' aria-label='Anchor' href='#disabled'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to any action that would violate any restriction options. ALso applied to an input field if the disabled
       function is called.
     </p>
 
-    <h2 id='old'>old <a class='anchorjs-link ' aria-label='Anchor' href='#old'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id='old'>old <a class='anchor-link ' aria-label='Anchor' href='#old'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to any date that is less than requested view, e.g. the last day of the previous month.
     </p>
 
-    <h2 id='new'>new <a class='anchorjs-link ' aria-label='Anchor' href='#new'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id='new'>new <a class='anchor-link ' aria-label='Anchor' href='#new'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to any date that is greater than of requested view, e.g. the last day of the previous month.
     </p>
 
-    <h2 id='active'>active <a class='anchorjs-link ' aria-label='Anchor' href='#active'><i
+    <h2 id='active'>active <a class='anchor-link ' aria-label='Anchor' href='#active'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to any date that is currently selected.
     </p>
 
-    <h2 id='dateContainer'>dateContainer <a class='anchorjs-link ' aria-label='Anchor' href='#dateContainer'><i
+    <h2 id='dateContainer'>dateContainer <a class='anchor-link ' aria-label='Anchor' href='#dateContainer'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The outer most element for the calendar view.
     </p>
 
-    <h2 id='decadesContainer'>decadesContainer <a class='anchorjs-link ' aria-label='Anchor' href='#decadesContainer'><i
+    <h2 id='decadesContainer'>decadesContainer <a class='anchor-link ' aria-label='Anchor' href='#decadesContainer'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The outer most element for the decades view.
     </p>
 
-    <h2 id='decade'>decade <a class='anchorjs-link ' aria-label='Anchor' href='#decade'><i
+    <h2 id='decade'>decade <a class='anchor-link ' aria-label='Anchor' href='#decade'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to elements within the decades container, e.g. 2020, 2030
     </p>
 
-    <h2 id='yearsContainer'>yearsContainer <a class='anchorjs-link ' aria-label='Anchor' href='#yearsContainer'><i
+    <h2 id='yearsContainer'>yearsContainer <a class='anchor-link ' aria-label='Anchor' href='#yearsContainer'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The outer most element for the years view.
     </p>
 
-    <h2 id='year'>year <a class='anchorjs-link ' aria-label='Anchor' href='#year'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id='year'>year <a class='anchor-link ' aria-label='Anchor' href='#year'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to elements within the years container, e.g. 2021, 2021
     </p>
 
-    <h2 id='monthsContainer'>monthsContainer <a class='anchorjs-link ' aria-label='Anchor' href='#monthsContainer'><i
+    <h2 id='monthsContainer'>monthsContainer <a class='anchor-link ' aria-label='Anchor' href='#monthsContainer'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The outer most element for the month view.
     </p>
 
-    <h2 id='month'>month <a class='anchorjs-link ' aria-label='Anchor' href='#month'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
+    <h2 id='month'>month <a class='anchor-link ' aria-label='Anchor' href='#month'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
     </h2>
     <p>
       Applied to elements within the month container, e.g. January, February
     </p>
 
-    <h2 id='daysContainer'>daysContainer <a class='anchorjs-link ' aria-label='Anchor' href='#daysContainer'><i
+    <h2 id='daysContainer'>daysContainer <a class='anchor-link ' aria-label='Anchor' href='#daysContainer'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The outer most element for the calendar view.
     </p>
 
-    <h2 id='day'>day <a class='anchorjs-link ' aria-label='Anchor' href='#day'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id='day'>day <a class='anchor-link ' aria-label='Anchor' href='#day'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to elements within the day container, e.g. 1, 2..31
     </p>
 
-    <h2 id='calendarWeeks'>calendarWeeks <a class='anchorjs-link ' aria-label='Anchor' href='#calendarWeeks'><i
+    <h2 id='calendarWeeks'>calendarWeeks <a class='anchor-link ' aria-label='Anchor' href='#calendarWeeks'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       If display.calendarWeeks is enabled, a column displaying the week of year is shown. This class is applied to each
       cell in that column.
     </p>
 
-    <h2 id='dayOfTheWeek'>dayOfTheWeek <a class='anchorjs-link ' aria-label='Anchor' href='#dayOfTheWeek'><i
+    <h2 id='dayOfTheWeek'>dayOfTheWeek <a class='anchor-link ' aria-label='Anchor' href='#dayOfTheWeek'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to the first row of the calendar view, e.g. Sunday, Monday
     </p>
 
-    <h2 id='today'>today <a class='anchorjs-link ' aria-label='Anchor' href='#today'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
+    <h2 id='today'>today <a class='anchor-link ' aria-label='Anchor' href='#today'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
     </h2>
     <p>
       Applied to the current date on the calendar view.
     </p>
 
-    <h2 id='weekend'>weekend <a class='anchorjs-link ' aria-label='Anchor' href='#weekend'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
+    <h2 id='weekend'>weekend <a class='anchor-link ' aria-label='Anchor' href='#weekend'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
     </h2>
     <p>
       Applied to the locale's weekend dates on the calendar view, e.g. Sunday, Saturday
     </p>
 
-    <h2 id='timeContainer'>timeContainer <a class='anchorjs-link ' aria-label='Anchor' href='#timeContainer'><i
+    <h2 id='timeContainer'>timeContainer <a class='anchor-link ' aria-label='Anchor' href='#timeContainer'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The outer most element for all time related elements.
     </p>
 
-    <h2 id='separator'>separator <a class='anchorjs-link ' aria-label='Anchor' href='#separator'><i
+    <h2 id='separator'>separator <a class='anchor-link ' aria-label='Anchor' href='#separator'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied the separator columns between time elements, e.g. hour *:* minute *:* second
     </p>
 
-    <h2 id='clockContainer'>clockContainer <a class='anchorjs-link ' aria-label='Anchor' href='#clockContainer'><i
+    <h2 id='clockContainer'>clockContainer <a class='anchor-link ' aria-label='Anchor' href='#clockContainer'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The outer most element for the clock view.
     </p>
 
-    <h2 id='hourContainer'>hourContainer <a class='anchorjs-link ' aria-label='Anchor' href='#hourContainer'><i
+    <h2 id='hourContainer'>hourContainer <a class='anchor-link ' aria-label='Anchor' href='#hourContainer'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The outer most element for the hours selection view.
     </p>
 
-    <h2 id='minuteContainer'>minuteContainer <a class='anchorjs-link ' aria-label='Anchor' href='#minuteContainer'><i
+    <h2 id='minuteContainer'>minuteContainer <a class='anchor-link ' aria-label='Anchor' href='#minuteContainer'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The outer most element for the minutes selection view.
     </p>
 
-    <h2 id='secondContainer'>secondContainer <a class='anchorjs-link ' aria-label='Anchor' href='#secondContainer'><i
+    <h2 id='secondContainer'>secondContainer <a class='anchor-link ' aria-label='Anchor' href='#secondContainer'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       The outer most element for the seconds selection view.
     </p>
 
-    <h2 id='hour'>hour <a class='anchorjs-link ' aria-label='Anchor' href='#hour'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id='hour'>hour <a class='anchor-link ' aria-label='Anchor' href='#hour'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to each element in the hours selection view.
     </p>
 
-    <h2 id='minute'>minute <a class='anchorjs-link ' aria-label='Anchor' href='#minute'><i
+    <h2 id='minute'>minute <a class='anchor-link ' aria-label='Anchor' href='#minute'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to each element in the minutes selection view.
     </p>
 
-    <h2 id='second'>second <a class='anchorjs-link ' aria-label='Anchor' href='#second'><i
+    <h2 id='second'>second <a class='anchor-link ' aria-label='Anchor' href='#second'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to each element in the seconds selection view.
     </p>
 
-    <h2 id='show'>show <a class='anchorjs-link ' aria-label='Anchor' href='#show'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id='show'>show <a class='anchor-link ' aria-label='Anchor' href='#show'><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied the element of the current view mode, e.g. calendar or clock.
     </p>
 
-    <h2 id='collapsing'>collapsing <a class='anchorjs-link ' aria-label='Anchor' href='#collapsing'><i
+    <h2 id='collapsing'>collapsing <a class='anchor-link ' aria-label='Anchor' href='#collapsing'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to the currently showing view mode during a transition between calendar and clock views
     </p>
 
-    <h2 id='collapse'>collapse <a class='anchorjs-link ' aria-label='Anchor' href='#collapse'><i
+    <h2 id='collapse'>collapse <a class='anchor-link ' aria-label='Anchor' href='#collapse'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to the currently hidden view mode.
     </p>
 
-    <h2 id='inline'>inline <a class='anchorjs-link ' aria-label='Anchor' href='#inline'><i
+    <h2 id='inline'>inline <a class='anchor-link ' aria-label='Anchor' href='#inline'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Applied to the widget when the option display.inline is enabled.
